# dumper_manager

./: README.md  docker-compose.yml  pyproject.toml
src/config/: settings.py  urls.py
src/dumpers/: admin.py  apps.py  models.py  urls.py  views.py
src/dumpers/migrations/: 0001_initial.py
src/dumpers/static/dumpers/css/: dumpers.css
src/dumpers/templates/: dumpers_list.html
tests/: test_models.py
